--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 			<version>1.1.5</version>
 		</dependency>
 
+		<!-- <dependency> <groupId>org.picocontainer</groupId> <artifactId>picocontainer</artifactId> 
+			<version>2.14.3</version> </dependency> -->
+
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-core</artifactId>
@@ -45,12 +48,38 @@
 			<version>0.2.3</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-context</artifactId> 
-			<version>4.1.6.RELEASE</version> </dependency> <dependency> <groupId>org.springframework</groupId> 
-			<artifactId>spring-aop</artifactId> <version>4.1.6.RELEASE</version> </dependency> 
-			<dependency> <groupId>org.springframework</groupId> <artifactId>spring-webmvc</artifactId> 
-			<version>4.1.6.RELEASE</version> </dependency> <dependency> <groupId>org.springframework</groupId> 
-			<artifactId>spring-web</artifactId> <version>4.1.6.RELEASE</version> </dependency> -->
+		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-picocontainer</artifactId> 
+			<version>1.2.3</version> </dependency> -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -119,8 +148,11 @@
 			<version>1.1</version>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-spring</artifactId>
+			<version>1.1.5</version>
+		</dependency>
 	</dependencies>
 
 </project>
